--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,23 @@
 /* Secondary color: Yellow (#ffef99) */
 
 /* Global styles */
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-image: image();
+  }
+  /* body {
+    background-image: url('');
+    background-size: cover;
   } */
   
   body {
     font-family: Arial, sans-serif;
     font-size: 16px;
     color: #333;
+    background-image: url('../pexels-brooke-laven-14762114.jpg');
+    background-size: cover;
   }
   
   h1, h2, h3, h4, h5, h6 {
@@ -62,9 +69,9 @@
   } */
   
    h1 {
-    font-size: 32px;
+    font-size: 40px;
     margin-bottom: 10px;
-    margin-left: auto;
+    margin-left: 10px;
     margin-right: auto;
     align-items: center;
   }
@@ -85,6 +92,11 @@
     justify-content: space-between;
     align-items: self-start; */
   }
+
+  #search-section h2{
+    margin-top: 10px;
+    color: #0080ff;
+  }
   
   #search-button {
     margin-left: 10px;
@@ -93,13 +105,14 @@
   /* Upload section */
   #upload-form {
     padding: 20px;
-    background-color: #fff;
+    /* background-color: #edac09; */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     align-items: center;
     justify-content: center;
+
   }
   
   #upload-section h2 {
@@ -161,9 +174,9 @@
   }
 
   p{
-    font-size: 10px;
+    font-size: 15px;
     margin-bottom: 10px;
-    color: #333;
+    color: white;
     text-align: center;
    
   }
