--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,4 +180,39 @@
     text-align: center;
    
   }
+
+  /* Nav bar */
+  nav {
+    /* background-color: #333; */
+    overflow: hidden;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  
+  nav li {
+    float: center;
+    justify-content: center;
+    display: flex;
+    
+  }
+  
+  nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    /* margin-left: 50%;
+    margin-right: 50%; */
+  }
+  
+  nav li a:hover {
+    background-color:  #00bfff;
+  }
+  
   
